fix work hover on mobile

--- a/assets/sass/site/primary/_posts-and-pages.scss
+++ b/assets/sass/site/primary/_posts-and-pages.scss
@@ -164,10 +164,11 @@ input[type="submit"] {
     width: 100%;
     height: 100%;
     overflow-x: hidden;
-    background-attachment: fixed;
+    
   }
   @media screen and (min-width: $deskwidth) {
     top: 0;
+    background-attachment: fixed;
   }
 }
 
@@ -221,7 +222,9 @@ input[type="submit"] {
     }
   }
   &:hover {
-     transform: scale(.95);
+    @media screen and (min-width: $tabwidth) {
+     transform: scale(.96);
+   }
   }
   h3 {
     width: 100%;
